vlib/v/checker/tests/incorrect_name_struct.out
vlib/v/checker/tests/incorrect_name_struct.vv:1:1: error: struct name `abc` must begin with capital letter
    1 | struct abc {}
      | ~~~~~~~~~~
